Instead of using <p> we separate paragraphs by double <br />. It it work around for: https://stackoverflow.com/questions/37396867/google-chrome-range-getclientrects-bug-in-browser-or-intended-behavior

--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ i {
   cursor: pointer;
   display: inline-block;
   font-size: 90%;
+  font-family: IlexSans;
 }
 
 .ilex-button:hover {
